fix: remove sidebar overlay preventting trailer on mobile

--- a/src/Components/moviePage/MoviePage.module.css
+++ b/src/Components/moviePage/MoviePage.module.css
@@ -13,6 +13,7 @@
     min-height: 100%;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+    /* z-index: -10; */
 }
 
 .logoContainer {
@@ -238,13 +239,13 @@ p.genre {
 
     .sidebarContainer {
         position: absolute;
-        width: 100%;
+        transform: translateX(-100%);
         border-radius: 0;
     }
 
     .sidebarNavlinks {
         
-        display: none;
+        display: block;
         background-color: white;
         z-index: -10;
     }
